--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3"
   },
   "private": true
 }
